# convffpg

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: packaging.yml  release.yml
assets/ffmpeg/: README.md
docs/: flatpak.md  linux-capture-dependencies.md  openscreen-rust-blueprint.md
flatpak/: build-flatpak.sh  io.github.terry.convffpg.desktop  io.github.terry.convffpg.metainfo.xml  io.github.terry.convffpg.metainfo.xml.in  io.github.terry.convffpg.yml  validate-packaging.sh
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: check-wayland-portal.sh  install-flatpak-runtimes.sh  install-tauri-linux-prereqs.sh  install-ubuntu-prereqs.sh  render-metainfo.sh
src/: conversion.rs  editor_export.rs  ffmpeg.rs  lib.rs  main.rs  recording.rs  session.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: import_export_smoke.rs
