[package]
name = "convffpg"
version = "0.2.0"
edition = "2024"
autobins = false

[lib]
path = "src/lib.rs"

[dependencies]
ashpd = { version = "0.13.9", default-features = false, features = ["screencast", "async-io"] }
dirs = "6.0.0"
libc = "0.2.184"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tempfile = "3.23.0"
walkdir = "2.5.0"
xz2 = "0.1.7"
