[package]
name = "convffpg-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "convffpg_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
convffpg = { path = "..", default-features = false }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
