[package]
name = "convffpg-tauri"
version = "0.2.0"
edition = "2021"

[lib]
name = "convffpg_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
convffpg = { path = "..", default-features = false }
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
